--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <h2 class="aboutMe only" data-aos="fade-right" data-aos-duration="3000"><span>.</span>about</h2>
     <div id="container">
       <video autoplay muted loop id="loading" data-aos="fade-right" data-aos-duration="3000"playsinline>
-        <source src="https://cdn.pixabay.com/vimeo/572349545/loading-80530.mp4?width=640&hash=38c0d1d0eed844d837279315edb079d63a01ea22" type="video/mp4">
+        <source src="https://cdn.pixabay.com/video/2021/05/24/75042-554536303_tiny.mp4" type="video/mp4">
       </video>
       <div id="about" data-aos="fade-left" data-aos-duration="3000">
         <p>My name is Kamilla. I am a passionate and dedicated junior web developer, driven by the ever-evolving world of technology and its limitless possibilities.I have always been fascinated by the intersection of the design and technology, and I am thrilled to be able to bring my creative ideas to life through coding.</p> 
